syntax = "proto3";

package cartographer.mapping.proto;

message TSDFRangeDataInserterOptions3D {
  enum NormalComputationMethod {
    INVALID = 0;
    PCL = 1;
    OPEN3D = 2;
    CLOUD_STRUCTURE = 3;
    TRIANGLE_FILL_IN = 4;
  }
  // Distance to the surface within the signed distance function is evaluated.
  double relative_truncation_distance = 1;

  // Maximum weight that can be stored in a cell.
  double maximum_weight = 2;

  // Up to how many free space voxels are updated for scan matching.
  // 0 disables free space.
  int32 num_free_space_voxels = 3;

  // Project the distance between the updated cell und the range observation to
  // the estimated scan normal.
  bool project_sdf_distance_to_scan_normal = 4;

  // Relative distance (to truncation distance) behind surface with constant
  // weight.
  double weight_function_epsilon = 5;

  // Exponential drop-off model variance.
  double weight_function_sigma = 6;

  // Up to how many free space voxels are updated for scan matching.
  // 0 disables free space.
  int32 normal_estimate_max_nn = 7;

  // Up to how many free space voxels are updated for scan matching.
  // 0 disables free space.
  double normal_estimate_radius = 8;

  NormalComputationMethod normal_computation_method = 9;

  double min_range = 10;
  double max_range = 11;
  double insertion_ratio = 12;
  int32 normal_computation_horizontal_stride = 13;
  int32 normal_computation_vertical_stride = 14;
}
